--- a/css/index.css
+++ b/css/index.css
@@ -15,9 +15,6 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: system-ui, sans-serif;
-  color: var(--darkgray);
-  background-color: var(--white);
 }
 p:last-child {
   margin-bottom: 0;
@@ -117,20 +114,24 @@ pre {
 /* Header */
 .home {
   padding: 0 1rem;
-  float: left;
   margin: 1rem 0; /* 16px /16 */
   font-size: 1em; /* 16px /16 */
 }
-.home :link:not(:hover) {
-  text-decoration: none;
+
+.home small {
+  font-size: 0.8em;
+  display: block;
+}
+
+header nav {
+  margin-left: auto;
 }
 
 /* Nav */
 .nav {
   padding: 0;
   list-style: none;
-  float: left;
-  margin-left: 1em;
+  margin-left: auto;
 }
 .nav-item {
   display: inline-block;
@@ -152,24 +153,23 @@ pre {
 .postlist-item {
   counter-increment: start-from -1;
 }
-.postlist-item:before {
-  display: inline-block;
+.postlist-item blockquote footer:before {
+  display: inline;
   pointer-events: none;
-  content: "" counter(start-from, decimal-leading-zero) ". ";
-  line-height: 100%;
+  content: "Session " counter(start-from, decimal-leading-zero) " | ";
   text-align: right;
+  margin-right: 0.3em;
 }
-.postlist-date,
-.postlist-item:before {
-  font-size: 0.8125em; /* 13px /16 */
+.postlist footer {
+  align-items: center;
   color: var(--darkgray);
+  display: flex;
+  font-size: 0.8125em; /* 13px /16 */
+  justify-content: center;
 }
 .postlist-date {
   word-spacing: -0.5px;
-}
-.postlist-link {
-  display: inline-block;
-  padding: 0.25em 0.1875em; /* 4px 3px /16 */
+  display: inline;
 }
 .postlist-item-active .postlist-link {
   font-weight: bold;
@@ -185,26 +185,15 @@ pre {
   display: inline-block;
   vertical-align: text-top;
   text-transform: uppercase;
-  font-size: 0.625em; /* 10px /16 */
-  padding: 2px 4px;
+  font-size: inherit; /* 10px /16 */
+  padding: 3px 4px 2px;
   margin-left: 0.8em; /* 8px /10 */
-  background-color: var(--red);
-  color: var(--white);
+  line-height: 0.9;
+  background-color: transparent;
+  border: 1px solid var(--darkgray);
   border-radius: 0.25em; /* 3px /12 */
   text-decoration: none;
-}
-a[href].tag,
-a[href].tag:visited {
-  color: #fff;
-}
-
-/* Warning */
-.warning {
-  background-color: #ffc;
-  padding: 1em 0.625em; /* 16px 10px /16 */
-}
-.warning ol:only-child {
-  margin: 0;
+  margin-bottom: 1px;
 }
 
 /* Direct Links / Markdown Headers */
@@ -223,4 +212,14 @@ a[href].direct-link:focus:visited,
 :hover > a[href].direct-link,
 :hover > a[href].direct-link:visited {
   color: #aaa;
+}
+
+.wrapper {
+  max-width: 37.5rem;
+  margin: 0 auto;
+}
+
+.row {
+  display: flex;
+  align-items: center;
 }
