--- a/feed/feed.njk
+++ b/feed/feed.njk
@@ -1,5 +1,5 @@
 ---
-permalink: feed/feed.xml
+permalink: feed.xml
 eleventyExcludeFromCollections: true
 ---
 <?xml version="1.0" encoding="utf-8"?>
@@ -22,7 +22,7 @@ eleventyExcludeFromCollections: true
 		<link href="{{ absolutePostUrl }}"/>
 		<updated>{{ post.date | rssDate }}</updated>
 		<id>{{ absolutePostUrl }}</id>
-		<content type="html">{{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}</content>
+		<content type="text">{{ post.data.description }}</content>
 	</entry>
 	{%- endfor %}
 </feed>
