--- a/index.njk
+++ b/index.njk
@@ -1,14 +1,11 @@
 ---
 layout: layouts/home.njk
 eleventyNavigation:
-  key: Home
+  key: Sessions
   order: 1
 ---
 
-<h1>Latest 3 Posts</h1>
+<h1>Session Logs</h1>
 
-{% set postslist = collections.posts | head(-3) %}
-{% set postslistCounter = collections.posts | length %}
+{% set postslist = collections.posts %}
 {% include "postslist.njk" %}
-
-<p>More posts can be found in <a href="{{ '/posts/' | url }}">the archive</a>.</p>
